# MechanismConfiguration

./: .clang-format  .dockerignore  .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  Dockerfile  PLAN-consolidate-v1.md  README.md  TODO-name-species_name-alias.md  bibliography.html  codecov.yml  genindex.html  index.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js
src/: CMakeLists.txt  check_schema.cpp  errors.cpp  parse.cpp  parse_status.cpp  parser.cpp  schema.cpp  validate.cpp  validate_schema.cpp  version.hpp.in
src/detail/: check_schema.hpp  constants.hpp  conversions.hpp  error_format.hpp  keys.hpp  validate_schema.hpp
src/detail/semantics/: aerosol.hpp  core.hpp  emissions.hpp  reactions.hpp
src/detail/v0/: keys.hpp  parser.hpp  parser_types.hpp
src/detail/v1/: aerosol_keys.hpp  aerosol_type_parsers.hpp  aerosol_type_schema.hpp  emissions_parser.hpp  keys.hpp  parser.hpp  reaction_parsers.hpp  type_parsers.hpp  type_schema.hpp  type_validators.hpp  utils.hpp
src/detail/v1/aerosol/: keys.hpp  parsers.hpp  schema.hpp  utils.hpp
src/detail/v1/emissions/: keys.hpp  parsers.hpp  schema.hpp
src/detail/v1/reactions/: keys.hpp  parsers.hpp  schema.hpp
src/detail/v1/species/: keys.hpp  parsers.hpp  schema.hpp
src/development/: CMakeLists.txt  compatability.cpp  mechanism.cpp  mechanism_parsers.cpp  parser.cpp  type_parsers.cpp  type_validators.cpp  utils.cpp  validator.cpp
src/development/models/: gas_model_paser.cpp  modal_model_parser.cpp
src/development/models/parsers/: CMakeLists.txt  gas.cpp  modal.cpp
src/development/models/validators/: gas.cpp  modal.cpp
src/development/reactions/: CMakeLists.txt  aqueous_equilibrium_parser.cpp  branched.cpp  branched_parser.cpp  condensed_phase_arrhenius_parser.cpp  condensed_phase_photolysis_parser.cpp  emission_parser.cpp  first_order_loss_parser.cpp  henrys_law_parser.cpp  photolysis_parser.cpp  simpol_phase_transfer_parser.cpp  surface_parser.cpp  taylor_series_parser.cpp  ternary_chemical_activation_parser.cpp  troe_parser.cpp  tunneling_parser.cpp  user_defined_parser.cpp  wet_deposition_parser.cpp
src/development/reactions/parsers/: CMakeLists.txt  aqueous_equilibrium.cpp  arrhenius.cpp  branched.cpp  condensed_phase_arrhenius.cpp  condensed_phase_photolysis.cpp  emission.cpp  first_order_loss.cpp  henrys_law.cpp  lambda_rate_constant.cpp  photolysis.cpp  simpol_phase_transfer.cpp  surface.cpp  taylor_series.cpp  ternary_chemical_activation.cpp  troe.cpp  tunneling.cpp  user_defined.cpp  wet_deposition.cpp
src/development/reactions/validators/: CMakeLists.txt  aqueous_equilibrium.cpp  arrhenius.cpp  branched.cpp  condensed_phase_arrhenius.cpp  condensed_phase_photolysis.cpp  emission.cpp  first_order_loss.cpp  henrys_law.cpp  lambda_rate_constant.cpp  photolysis.cpp  simpol_phase_transfer.cpp  surface.cpp  taylor_series.cpp  ternary_chemical_activation.cpp  troe.cpp  tunneling.cpp  user_defined.cpp  wet_deposition.cpp
src/emissions/v1/: CMakeLists.txt  keys.hpp  parser.cpp  parser.hpp
src/v0/: arrhenius_parser.cpp  branched_parser.cpp  emission_parser.cpp  first_order_loss_parser.cpp  parser.cpp  photolysis_parser.cpp  species_parser.cpp  surface_parser.cpp  ternary_chemical_activation_parser.cpp  troe_parser.cpp  tunneling_parser.cpp  user_defined_reaction_parser.cpp
src/v1/: CMakeLists.txt  aerosol_parsers.cpp  aerosol_type_parsers.cpp  aerosol_type_schema.cpp  aqueous_equilibrium_parser.cpp  arrhenius_parser.cpp  branched_parser.cpp  condensed_phase_arrhenius_parser.cpp  condensed_phase_photolysis_parser.cpp  emissions_parser.cpp  henrys_law_parser.cpp  mechanism_parsers.cpp  parser.cpp  simpol_phase_transfer_parser.cpp  species_parser.cpp  surface_parser.cpp  troe_parser.cpp  type_parsers.cpp  type_schema.cpp  type_validators.cpp  utils.cpp  wet_deposition_parser.cpp
src/v1/aerosol/: CMakeLists.txt  parsers.cpp  schema.cpp  utils.cpp
src/v1/emissions/: parsers.cpp  schema.cpp
src/v1/models/: CMakeLists.txt  gas_model_paser.cpp  modal_model_parser.cpp
src/v1/reactions/: CMakeLists.txt  aqueous_equilibrium_parser.cpp  arrhenius.cpp  arrhenius_parser.cpp  branched.cpp  branched_parser.cpp  condensed_phase_arrhenius_parser.cpp  condensed_phase_photolysis_parser.cpp  emission.cpp  emission_parser.cpp  first_order_loss.cpp  first_order_loss_parser.cpp  henrys_law_parser.cpp  lambda_parser.cpp  lambda_rate_constant.cpp  parsers.cpp  photolysis.cpp  photolysis_parser.cpp  schema.cpp  simpol_phase_transfer_parser.cpp  surface.cpp  surface_parser.cpp  taylor_series.cpp  taylor_series_parser.cpp  ternary_chemical_activation.cpp  ternary_chemical_activation_parser.cpp  troe.cpp  troe_parser.cpp  tunneling.cpp  tunneling_parser.cpp  user_defined.cpp  user_defined_parser.cpp  wet_deposition_parser.cpp
src/v1/reactions/parsers/: CMakeLists.txt  aqueous_equilibrium.cpp  arrhenius.cpp  branched.cpp  condensed_phase_arrhenius.cpp  condensed_phase_photolysis.cpp  emission.cpp  first_order_loss.cpp  henrys_law.cpp  lambda_rate_constant.cpp  photolysis.cpp  simpol_phase_transfer.cpp  surface.cpp  taylor_series.cpp  ternary_chemical_activation.cpp  troe.cpp  tunneling.cpp  user_defined.cpp  wet_deposition.cpp
src/v1/reactions/schema/: arrhenius.cpp  branched.cpp  emission.cpp  first_order_loss.cpp  (+8 more)
src/v1/species/: CMakeLists.txt  parsers.cpp  schema.cpp
test/integration/: CMakeLists.txt  test_development_parser.cpp  test_parser.cpp  test_v0_parser.cpp  test_v1_parser.cpp  test_v1_read_from_file_configs.cpp
test/integration/integration_configs/: cam_clound_chemistry.json  invalid_version.yaml
test/unit/v1/: CMakeLists.txt  test_parse_aerosol.cpp  test_parse_aqueous_equilibrium.cpp  test_parse_arrhenius.cpp  test_parse_branched.cpp  test_parse_condensed_phase_arrhenius.cpp  test_parse_condensed_phase_photolysis.cpp  test_parse_emission.cpp  test_parse_first_order_loss.cpp  test_parse_henrys_law.cpp  test_parse_phases.cpp  test_parse_simpol_phase_transfer.cpp  test_parse_species.cpp  test_parse_surface.cpp  test_parse_tunneling.cpp  test_parse_wet_deposition.cpp
(+954 files in other folders)
